<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DemoApp</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content"></string>
    <string name="authenticate">Code\nFlow</string>
    <string name="clear">Clear</string>
    <string name="addAccount">AddAccount</string>
    <string name="call_userinfo">Call\nUser\nInfo</string>
 	<string name="callapi_id">Call\nAPI\nID</string>
	<string name="callapi_time">Call\nAPI\nTime</string>
	<string name="submit_auth">Resource Owner Flow</string>
	<string name="RefreshToken">Refresh Token: </string>
	<string name="OIDC">ID Token: </string>
	<string name="APICall_Label">API Call Return Values: </string>
	<string name="userinfo_label">Claims: </string>
	<string name="url_label">WS URL: </string>
	<string name="params_label">Post Parameters: </string>
	<string name="exec">Execute Service </string>
	<string name="web_service_url">http://pbens.com/REST_samples/index.php?method=hello&amp;format=json </string>
	
</resources>
