<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cccccc"
    
    tools:context=".FullscreenActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="#33b5e5"
        android:textSize="16sp"
        
        android:textAlignment="0" />

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" 
        >

        <LinearLayout
            android:id="@+id/bottom_buttons"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >
			
            <Button
                android:id="@+id/button_auth"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start|top"
                android:onClick="click_auth"
                android:text="@string/authenticate"
                android:textSize="16sp" />

            <Button
                android:id="@+id/Button_Clear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start|left"
                android:onClick="click_clear"
                android:text="@string/clear" 
                android:textSize="16sp"/>

            <Button
                android:id="@+id/Button_call_userinfo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="click_call_userinfo"
                android:text="@string/call_userinfo" 
                android:textSize="16sp"/>
            
            <Button
                android:id="@+id/Button_callapi_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="click_callapi_id"
                android:text="@string/callapi_id"
                android:textSize="16sp" />

            <Button
                android:id="@+id/Button_callapi_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="click_callapi_time"
                android:text="@string/callapi_time"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/AuthResourceCredentials"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="click_AuthResourceCredentials"
                android:text="@string/submit_auth" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/RT_Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/RefreshToken" />

                <TextView
                    android:id="@+id/RT_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/OIDC_Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/OIDC" />

                <TextView
                    android:id="@+id/OIDC_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/APICall_Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/APICall_Label" />

                <TextView
                    android:id="@+id/APICall_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>            
            
        </LinearLayout>

    </FrameLayout>

</FrameLayout>
